# llm-quickstart

./: .gitignore  .nojekyll  01-basics-bedrock.R  01-basics-chatlas-bedrock.py  01-basics-chatlas.py  01-basics-github-chatlas.py  01-basics-github-openai.py  01-basics-github.R  01-basics-langchain.py  01-basics-openai.py  01-basics.R  02-tools-chatlas.py  02-tools-langchain.py  02-tools-openai.py  02-tools-prompt.html  02-tools-prompt.md  02-tools-weather.R  02-tools.R  03-shiny-chat-app.R  03-shiny-chat-app.py  03-shiny-chat.R  04-structured-openai.py  04-structured.R  05-vision-chatlas.py  05-vision.R  README.md  all-projects.html  app-kickstart-chat.py  index.html  intro.html  intro.qmd  mentor_assistant.R  pyproject.toml  quickstart.html  quickstart.qmd  requirements.txt  robots.txt  search.json  sitemap.xml
apps/: README.md
apps/basic-chat/: app.R  prompt.html  prompt.md
apps/claude-chat/: .gitignore  README.md  app.R  app.py  prompt.txt
apps/rag-chat/: app.R
apps/tool-chat/: app.R  prompt.html  prompt.md
llm-chat/basic-chat/: prompt.html
site_libs/bootstrap/: bootstrap-a1ffe3d69870ed6d195db4f8a7ccc4f3.min.css  bootstrap.min.css
